--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="home__blob grid">
                             <div class="home__perfil">
                                 <!--==================== src="assets/img/perfil.png" alt="home perfil" ====================-->
-                                <img src="#" alt="">  
+                                <img src="assets/img/profile01.png" alt="home perfil">  
                             </div>
 
                             <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
